kubernetes/installation/prometheus-operator/prometheus/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: web
    port: 9090
    targetPort: web
    nodePort: 29090
  selector:
    app: prometheus
    prometheus: k8s
