kubernetes/installation/prometheus-operator/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.mecby.com
    http:
      paths:
      - path: /
        backend:
            serviceName: prometheus-k8s
            servicePort: 9090
